# hello-spec

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
config/: evaluation.yaml  secrets.env.example
docs/: ARCHITECTURE.md  ELEMENT-MAP.md  METHODOLOGY.md  SHOWCASE.md  security-review.md
docs/visual/: README.md  index.html  poster.html
hello_spec/foundry/: config.py  detection_rules.py  engine.py  remediation.py  rule_authoring.py
rules/: codeguard-0-hellospec-command-injection.md  codeguard-0-hellospec-idor.md  codeguard-0-hellospec-path-traversal.md  codeguard-0-hellospec-sql-injection.md  codeguard-1-hellospec-hardcoded-credentials.md
scripts/: build_rules.sh  showcase_server.py
specs/001-remediator-role/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-variant-hunter/: plan.md  spec.md  tasks.md
specs/003-rule-gap-flywheel/: plan.md  spec.md  tasks.md
specs/004-attack-mapper/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_attack_mapper.py  test_deep_tester.py  test_detector_llm.py  test_evidence_gate.py  test_idempotency.py  test_principles.py  test_remediator.py  test_remediator_llm.py  test_rule_gap_flywheel.py  test_showcase_server.py  test_variant_hunter.py
(+41 files in other folders)
