[project]
name = "hello-spec"
version = "0.1.0"
description = "A hello-world that learns and applies Project CodeGuard + Foundry Security Spec patterns and controls"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["anthropic>=0.40"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
packages = ["hello_spec", "hello_spec.foundry"]
